syntax = "proto3";

package table;

message Row {
  repeated string primary_key = 1;
  repeated string subsidiary_val = 2;
}

message Table {
  repeated string field_names = 1;
  repeated Row rows = 2;
  repeated string primary_key_names = 3;
}
