syntax = "proto3";

package update;

// Update represents a row whose non-key values changed between two states.
message Update {
  // The values that make up the composite primary key.
  repeated bytes key = 1;
  // The subsidiary (non-key) values before the change.
  repeated bytes old_value = 2;
  // The subsidiary (non-key) values after the change.
  repeated bytes new_value = 3;
}
